# libclap

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  fuzz.yml  sanitizers.yml  test.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  clapConfig.cmake.in  libclap.pc.in
docs/: Doxyfile.in
examples/: CMakeLists.txt  action_demo.c  basic.c  custom_type.c  git_style.c
include/clap/: clap.h  clap_action.h  clap_allocator.h  clap_color.h  clap_error.h  clap_export.h  clap_i18n.h  clap_types.h  clap_version.h
po/: libclap.pot
scripts/: run_tests.ps1  run_tests.sh
src/: CMakeLists.txt  clap.c  clap_action_executor.c  clap_actions.c  clap_allocator.c  clap_arena.c  clap_argument.c  clap_buffer.c  clap_color.c  clap_convert.c  clap_dependency.c  clap_display_group.c  clap_error.c  clap_find.c  clap_formatter.c  clap_i18n.c  clap_mutex.c  clap_namespace.c  clap_parser.c  clap_parser_internal.h  clap_parser_stage.c  clap_pattern.c  clap_subparser.c  clap_tokenizer.c  clap_trie.c  clap_validator.c
tests/: CMakeLists.txt  test_main.c
tests/fuzz/: fuzz_clap.c
tests/integration/: test_parse_flow.c  test_scenarios.c  test_usage.c
tests/unit/: test_action_executor.c  test_actions.c  test_allocator.c  test_arena.c  test_argument.c  test_buffer.c  test_clap.c  test_color.c  test_convert.c  test_dependency.c  test_display_group.c  test_error.c  test_find.c  test_formatter.c  test_i18n.c  test_mutex.c  test_namespace.c  test_parser.c  test_pattern.c  test_subparser.c  test_tokenizer.c  test_trie.c  test_validator.c
